force-app/main/default/objects/MigrationEndUser__c/MigrationEndUser__c.object-meta.xml
<CustomObject>
    <label>Migration End User</label>
    <nameField>
        <displayFormat>MEU-{000000}</displayFormat>
        <label>Migration End User Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration End Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>