force-app/main/default/objects/MigrationEndUser__c/fields/LastTrainingModuleTakenDate__c.field-meta.xml
<CustomField>
    <fullName>LastTrainingModuleTakenDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Training Module Taken On</label>
    <type>Date</type>
</CustomField>