force-app/main/default/objects/MigrationEndUser__c/fields/MigrationCustomer__c.field-meta.xml
<CustomField>
    <fullName>MigrationCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Migration Customer</label>
    <referenceTo>MigrationCustomer__c</referenceTo>
    <relationshipLabel>Migration End Users</relationshipLabel>
    <relationshipName>Migration_End_Users</relationshipName>
    <type>Lookup</type>
</CustomField>