force-app/main/default/objects/MigrationEndUser__c/fields/MigrationProperty__c.field-meta.xml
<CustomField>
    <fullName>MigrationProperty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Migration Property</label>
    <referenceTo>MigrationProperty__c</referenceTo>
    <relationshipLabel>Migration End Users</relationshipLabel>
    <relationshipName>Migration_End_Users</relationshipName>
    <type>Lookup</type>
</CustomField>