force-app/main/default/objects/MigrationEndUser__c/fields/PropertyAccount__c.field-meta.xml
<CustomField>
    <fullName>PropertyAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Migration End Users (Property Account)</relationshipLabel>
    <relationshipName>Property_Migration_End_Users</relationshipName>
    <type>Lookup</type>
</CustomField>