force-app/main/default/objects/MigrationEndUser__c/fields/TrainingModulesTaken__c.field-meta.xml
<CustomField>
    <fullName>TrainingModulesTaken__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Training Modules Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>